helm/app/networking/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webapp-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - gke.prod.bh7cw.me
    - gke.prod.xinyuzhang.me
  #   tls:
  #     httpsRedirect: true # sends 301 redirect for http requests
  # - port:
  #     number: 443
  #     name: https-443
  #     protocol: HTTPS
  #   hosts:
  #   - gke.prod.bh7cw.me
  #   - gke.prod.xinyuzhang.me
  #   tls:
  #     mode: SIMPLE # enables HTTPS on this port
  #     credentialName: telemetry-gw-cert # fetches certs from Kubernetes secret

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp-gateway-rule
  namespace: default
spec:
  hosts:
  - webapp-deployment-svc.default.svc.cluster.local
  - gke.prod.bh7cw.me
  - gke.prod.xinyuzhang.me
  gateways:
  - istio-system/webapp-gateway
  http:
  - match:
    - uri:
        prefix: /webapp
    - uri:
        prefix: /actuator
    route:
    - destination:
        port:
          number: 80 # can be omitted if it's the only port for reviews
        host: webapp-deployment-svc.default.svc.cluster.local
      weight: 100
